# retarus-rust

./: .env  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/ISSUE_TEMPLATE/: 01_bug.md
.github/workflows/: cd.yml  ci.yml  rust_sdk.yaml
examples/: Cargo.toml  README.md  csv_to_sms.rs  fax_application.rs  fax_async_application.rs  get_jobs.rs  send_fax_async.rs  send_sms_async.rs  send_sms_sync.rs  upload_webexpress_async.rs
examples/assets/: advertisement.txt  sms_data.csv
examples/fax_daemon/: Cargo.toml  README.md
examples/fax_daemon/src/: main.rs
retarus/: Cargo.toml  README.md  makefile
retarus-tests/: .gitignore  Cargo.toml
retarus-tests/assets/: test.csv
retarus-tests/src/: lib.rs  provider.rs  test_fax_client.rs  test_sms_client.rs  test_sync_fax.rs  test_webexpress.rs
retarus/src/: lib.rs
retarus/src/common/: creds.rs  mod.rs  transport.rs
retarus/src/fax/: client.rs  document.rs  job.rs  job_error.rs  mod.rs  report.rs  responses.rs
retarus/src/fax/_async/: client.rs
retarus/src/fax/sync/: client.rs
retarus/src/general/: creds.rs  mod.rs  report.rs  transport.rs  uri.rs
retarus/src/sms/: client.rs  models.rs
retarus/src/webexpress/: client.rs  job.rs  mod.rs
