[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
retarus = { version = "0.1.0", path= "../retarus", features = ["default"] }
tokio = { version = "1.19.2", features = ["full"]}
csv = "1.1.6"

[[example]]
name = "fax_application"
path = "fax_application.rs"

[[example]]
name = "csv_to_sms"
path = "csv_to_sms.rs"