[package]
name = "retarus"
version = "0.1.0"
authors = ["Michael Lichtenecker <michael.lichtenecker@retarus.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.137"

base64 = "0.13.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tracing = "0.1.34"
serde_json = "1.0.81"
crossbeam = "0.8"
tokio = { version = "1.19.2", features = ["full"] }
serde-xml-rs = "0.5.1"
futures = "0.3"
tokio-core = "0.1"
tokio-compat-02 = "0.2"
