[package]
name = "retarus"
version = "0.1.0"
authors = ["Retarus GmbH <developers@retarus.com>"]
edition = "2021"
repository = "https://github.com/retarus/retarus-rust"
description="The official Rust SDK provided by Retarus to contact our messaging services with the lightning speed of the rust programming language."
homepage = "https://github.com/retarus/retarus-rust"
license = "MIT AND Apache-2.0"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.137"

base64 = "0.13.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde_json = "1.0.81"
crossbeam = "0.8"
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3"
tokio-core = "0.1"
tokio-compat-02 = "0.2"
chrono = "0.4.22"
reqwest = { version = "0.11.13", features = ["multipart", "stream"] }

[features]
default = ["sms", "fax", "webexpress"]
sms = []
fax = []
webexpress = []